--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20040523
- - (djm) Explain consequences of UsePAM=yes a little better in sshd_config;
-   ok dtucker@
+ - (djm) [sshd_config] Explain consequences of UsePAM=yes a little better in 
+   sshd_config; ok dtucker@
+ - (djm) [configure.ac] Warn if the system has no known way of figuring out 
+   which user is on the other end of a Unix domain socket; ok dtucker@
 
 20040513
  - (dtucker) [configure.ac] Bug #867: Additional tests for res_query in
