- (dtucker) [contrib/caldera/openssh.spec contrib/redhat/openssh.spec    contrib/README CREDITS INSTALL] Bug #873: Correct URLs for x11-ssh-askpass    and Jim Knoble's email address , from Jim himself.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20040527
+ - (dtucker) [contrib/caldera/openssh.spec contrib/redhat/openssh.spec
+   contrib/README CREDITS INSTALL] Bug #873: Correct URLs for x11-ssh-askpass
+   and Jim Knoble's email address , from Jim himself.
+
 20040524
  - (dtucker) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2004/05/19 12:17:33
