--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
  - (dtucker) [auth-pam.c] Use an invalid password for root if
    PermitRootLogin != yes or the login is invalid, to prevent leaking
    information.  Based on Openwall's owl-always-auth patch.  ok djm@
+ - (tim) [configure.ac Makefile.in] Add support for "make package" ok djm@
+ - (tim) [buildpkg.sh.in] New file. A more flexible version of
+   contrib/solaris/buildpkg.sh used for "make package".
 
 20040527
  - (dtucker) [contrib/caldera/openssh.spec contrib/redhat/openssh.spec
