--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040603
+ - (dtucker) [auth-pam.c] Don't use pam_* namespace for sshd's PAM functions.
+   ok djm@
+
 20040601
  - (djm) [auth-pam.c] Add copyright for local changes
 
