--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040616
+ - (dtucker) [openbsd-compat/port-aix.c] Expand whitespace -> tabs. No
+   code changes.
+
 20040615
  - (djm) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2004/05/26 08:59:57
