--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20040616
  - (dtucker) [openbsd-compat/port-aix.c] Expand whitespace -> tabs. No
    code changes.
+ - (dtucker) [regress/test-exec.sh]
+   Move Portable-only StrictModes to top of list to make syncs easier.
  - (dtucker) OpenBSD CVS Sync regress/
    - djm@cvs.openbsd.org 2004/04/27 09:47:30
      [regress/Makefile regress/test-exec.sh, added regress/envpass.sh]
