--- a/ChangeLog
+++ b/ChangeLog
@@ -20,7 +20,7 @@
      [regress/scp.sh]
      Make scp -r tests use diff -rN not cmp (which won't do dirs.  ok markus@
    - dtucker@cvs.openbsd.org 2004/06/16 13:16:40
-     [multiplex.sh]
+     [regress/multiplex.sh]
      Silence multiplex sftp and scp tests.  ok markus@
  - (dtucker) [regress/test-exec.sh]
    Move Portable-only StrictModes to top of list to make syncs easier.
