--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040617
+ - (dtucker) [regress/scp.sh] diff -N is not portable (but needed for some
+   platforms), so test if diff understands it.  Pointed out by tim@, ok djm@
+
 20040616
  - (dtucker) [openbsd-compat/port-aix.c] Expand whitespace -> tabs. No
    code changes.
