--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,8 @@
    - dtucker@cvs.openbsd.org 2004/06/17 06:19:06
      [regress/multiplex.sh]
      Add small description of failing test to failure message; ok djm@
+ - (dtucker) [regress/multiplex.sh] add EXEEXT for those platforms that need
+   it.
 
 20040616
  - (dtucker) [openbsd-compat/port-aix.c] Expand whitespace -> tabs. No
