--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@
      Add small description of failing test to failure message; ok djm@
  - (dtucker) [regress/multiplex.sh] add EXEEXT for those platforms that need
    it.
+ - (dtucker) [regress/multiplex.sh] Increase sleep time to 120 sec (60 is not
+   enough for slow systems, especially if they don't have a kernel RNG).
 
 20040616
  - (dtucker) [openbsd-compat/port-aix.c] Expand whitespace -> tabs. No
