- (dtucker) [defines.h] Define __dead if not already defined.

--- a/ChangeLog
+++ b/ChangeLog
@@ -38,6 +38,7 @@
      don't show .files by default in ls, add -a option to turn them back on;
      ok markus
  - (dtucker) [monitor.c] Fix Portable-specific -Wshadow warnings on "socket".
+ - (dtucker) [defines.h] Define __dead if not already defined.
 
 20040620
  - (tim) [configure.ac Makefile.in] Only change TEST_SHELL on broken platforms.
