--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,8 @@
    - dtucker@cvs.openbsd.org 2004/06/22 22:55:56
      [regress/dynamic-forward.sh regress/test-exec.sh]
      Allow setting of port for regress from TEST_SSH_PORT variable; ok markus@
+ - (dtucker) [cipher.c] encrypt->do_encrypt inside SSH_OLD_EVP to match
+   -Wshadow change.
 
 20040622
  - (bal) [auth-passwd.c auth1.c] Clean up unused variables.
