--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@
    -Wshadow change.
  - (dtucker) [auth.c openbsd-compat/port-aix.c openbsd-compat/port-aix.h]
    Move loginrestrictions test to port-aix.c, replace with a generic hook.
+ - (tim) [regress/try-ciphers.sh] "if ! some_command" is not portable.
 
 20040622
  - (bal) [auth-passwd.c auth1.c] Clean up unused variables.
