--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@
    - djm@cvs.openbsd.org 2004/06/25 01:25:12
      [regress/test-exec.sh]
      clean reexec-specific junk out of text-exec.sh and simplify; idea markus@
+ - (dtucker) [configure.ac openbsd-compat/misc.c [openbsd-compat/misc.h]
+   Add closefrom() for platforms that don't have it.
 
 20040623
  - (dtucker) [auth1.c] Ensure do_pam_account is called for Protocol 1
