--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20040627
  - (tim) update README files.
  - (dtucker) [mdoc2man.awk] Bug #883: correctly recognise .Pa and .Ev macros.
+ - (dtucker) [regress/README.regress] Document new variables.
 
 20040626
  - (djm) OpenBSD CVS Sync
