--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
    Ensures messages from PAM modules are displayed when privsep=no.
  - (dtucker) [auth-pam.c] Bug #705: Make arguments match PAM specs, fixes
    warnings on compliant platforms.  From paul.a.bolton at bt.com.  ok djm@
+ - (dtucker) [auth-pam.c] Bug #559 (last piece): Pass DISALLOW_NULL_AUTHTOK
+   to pam_authenticate for challenge-response auth too.  Originally from
+   fcusack at fcusack.com, ok djm@
 
 20040630
  - (dtucker) [auth-pam.c] Check for buggy PAM modules that return a NULL
