--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
  - (dtucker) [auth-pam.c] Bug #559 (last piece): Pass DISALLOW_NULL_AUTHTOK
    to pam_authenticate for challenge-response auth too.  Originally from
    fcusack at fcusack.com, ok djm@
+ - (tim) [buildpkg.sh.in] Add $REV to bump the package revision within
+   the same version. Handle the case where someone uses --with-privsep-user=
+   and the user name does not match the group name. ok dtucker@
 
 20040630
  - (dtucker) [auth-pam.c] Check for buggy PAM modules that return a NULL
