--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040702
+ - (dtucker) [mdoc2man.awk] Teach it to ignore .Bk -words, reported by
+   strube at physik3.gwdg.de a long time ago.
+
 20040701
  - (dtucker) [session.c] Call display_loginmsg again after do_pam_session.
    Ensures messages from PAM modules are displayed when privsep=no.
