--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    ok dtucker@
  - (djm) [auth-pam.c] Avoid use of xstrdup and friends in conversation function,
    instead return PAM_CONV_ERR, avoiding another path to fatal(); ok dtucker@
+ - (tim) [configure.ac] updwtmpx() on OpenServer seems to add duplicate entry.
+   Report by rac AT tenzing.org
 
 20040717
  - (dtucker) [logintest.c scp.c sftp-server.c sftp.c ssh-add.c ssh-agent.c
