--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20040719
  - (djm) [log.c] bz #111: Escape more control characters when sending data 
    to syslog; from peak AT argo.troja.mff.cuni.cz
+ - (djm) [contrib/redhat/sshd.pam] bz #903: Remove redundant entries; from 
+   peak AT argo.troja.mff.cuni.cz
 
 20040719
  - (djm) [openbsd-compat/bsd-arc4random.c] Discard early keystream, like OpenBSD
