--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,10 @@
-20040719
+20040720
  - (djm) [log.c] bz #111: Escape more control characters when sending data 
    to syslog; from peak AT argo.troja.mff.cuni.cz
  - (djm) [contrib/redhat/sshd.pam] bz #903: Remove redundant entries; from 
    peak AT argo.troja.mff.cuni.cz
+ - (djm) [regress/README.regress] Remove caveat regarding TCP wrappers, now
+   that sshd is fixed to behave better; suggested by tim
 
 20040719
  - (djm) [openbsd-compat/bsd-arc4random.c] Discard early keystream, like OpenBSD
