--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@
    - djm@cvs.openbsd.org 2004/07/21 10:36:23
      [gss-serv-krb5.c]
      fix function declaration
+ - (djm) [auth-pam.c] Portable parts of bz#899: Don't display invalid 
+   usernames in setproctitle from peak AT argo.troja.mff.cuni.cz;
 
 20040720
  - (djm) [log.c] bz #111: Escape more control characters when sending data 
