--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
    openbsd-compat/bsd-closefrom.c openbsd-compat/bsd-misc.c 
    openbsd-compat/bsd-misc.h openbsd-compat/openbsd-compat.h] Use smarter 
    closefrom() replacement from sudo; ok dtucker@
+ - (djm) [loginrec.c] Check that seek succeeded here too; ok dtucker
 
 20040814
  - (dtucker) [auth-krb5.c gss-serv-krb5.c openbsd-compat/xmmap.c]
