--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
    - markus@cvs.openbsd.org 2004/08/16 08:17:01
      [version.h]
      3.9
+ - (djm) Crank RPM spec version numbers
 
 20040816
  - (dtucker) [acconfig.h auth-pam.c configure.ac] Set real uid to non-root
