--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20040829
+ - (dtucker) [openbsd-compat/getrrsetbyname.c] Prevent getrrsetbyname from
+   failing with NOMEMORY if no sigs are returned and malloc(0) returns NULL.
+   From Martin.Kraemer at Fujitsu-Siemens.com; ok djm@
+
 20040828
  - (dtucker) [openbsd-compat/mktemp.c] Remove superfluous Cygwin #ifdef; from
    vinschen at redhat.com.
