--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,8 @@
      [sshd.c]
      don't erroneously close stdin for !reexec case, from Dave Johnson;
      ok markus@
+ - (dtucker) [configure.ac] Include sys/stream.h in sys/ptms.h header check,
+   fixes configure warning on Solaris reported by wknox at mitre.org.
 
 20040828
  - (dtucker) [openbsd-compat/mktemp.c] Remove superfluous Cygwin #ifdef; from
