--- a/ChangeLog
+++ b/ChangeLog
@@ -30,6 +30,8 @@
  - (dtucker) [regress/dynamic-forward.sh] Allow time for connections to be torn
    down, needed on some platforms, should be harmless on others.  Patch from
    jason at devrandom.org.
+ - (dtucker) [regress/scp.sh] Make this work on Cygwin too, which doesn't like
+   files ending in .exe that aren't binaries; patch from vinschen at redhat.com.
 
 20040828
  - (dtucker) [openbsd-compat/mktemp.c] Remove superfluous Cygwin #ifdef; from
