--- a/ChangeLog
+++ b/ChangeLog
@@ -32,6 +32,8 @@
    jason at devrandom.org.
  - (dtucker) [regress/scp.sh] Make this work on Cygwin too, which doesn't like
    files ending in .exe that aren't binaries; patch from vinschen at redhat.com.
+ - (dtucker) [Makefile.in] Get regress/Makefile symlink right for out-of-tree
+   builds too, from vinschen at redhat.com.
 
 20040828
  - (dtucker) [openbsd-compat/mktemp.c] Remove superfluous Cygwin #ifdef; from
