--- a/ChangeLog
+++ b/ChangeLog
@@ -34,6 +34,8 @@
    files ending in .exe that aren't binaries; patch from vinschen at redhat.com.
  - (dtucker) [Makefile.in] Get regress/Makefile symlink right for out-of-tree
    builds too, from vinschen at redhat.com.
+ - (dtucker) [regress/agent-ptrace.sh] Skip ptrace test on OSF1/DUnix/Tru64
+   too; patch from cmadams at hiwaay.net.
 
 20040828
  - (dtucker) [openbsd-compat/mktemp.c] Remove superfluous Cygwin #ifdef; from
