--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20040830
+ - (dtucker) [session.c openbsd-compat/bsd-cygwin_util.{c,h}] Bug #915: only
+   copy required environment variables on Cygwin.  Patch from vinschen at
+   redhat.com, ok djm@
+
 20040829
  - (dtucker) [openbsd-compat/getrrsetbyname.c] Prevent getrrsetbyname from
    failing with NOMEMORY if no sigs are returned and malloc(0) returns NULL.
