--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20040911
+ - (djm) [ssh-agent.c] unifdef some cygwin code; ok dtucker@
+
 20040830
  - (dtucker) [session.c openbsd-compat/bsd-cygwin_util.{c,h}] Bug #915: only
    copy required environment variables on Cygwin.  Patch from vinschen at
