--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
  - (dtucker) [auth-pam.c auth-pam.h session.c] Bug #890: Send output from
    failing PAM session modules to user then exit, similar to the way
    /etc/nologin is handled.  ok djm@
+ - (dtucker) [auth-pam.c] Relocate sshpam_store_conv(), no code change.
 
 20040830
  - (dtucker) [session.c openbsd-compat/bsd-cygwin_util.{c,h}] Bug #915: only
