--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@
    SSH2_MSG_USERAUTH_BANNER messages.  Note that this will not happen with
    SSH2 kbdint authentication, which need to be dealt with separately.  ok djm@
  - (dtucker) [session.c] Bug #927: make .hushlogin silent again.  ok djm@
+ - (dtucker) [configure.ac] Bug #321: Add cross-compile support to configure.
+   Parts by chua at ayrnetworks.com, astrand at lysator.liu.se and me.  ok djm@
 
 20040830
  - (dtucker) [session.c openbsd-compat/bsd-cygwin_util.{c,h}] Bug #915: only
