--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040912
+ - (djm) [loginrec.c] Start KNF and tidy up of this long-neglected file.
+   No change in resultant binary
+
 20040911
  - (djm) [ssh-agent.c] unifdef some cygwin code; ok dtucker@
  - (dtucker) [auth-pam.c auth-pam.h session.c] Bug #890: Send output from
