--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20040912
  - (djm) [loginrec.c] Start KNF and tidy up of this long-neglected file.
    No change in resultant binary
+ - (djm) [loginrec.c] __func__ifiy
 
 20040911
  - (djm) [ssh-agent.c] unifdef some cygwin code; ok dtucker@
