--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
  - (djm) [loginrec.c] Start KNF and tidy up of this long-neglected file.
    No change in resultant binary
  - (djm) [loginrec.c] __func__ifiy
+ - (djm) [loginrec.c] xmalloc
 
 20040911
  - (djm) [ssh-agent.c] unifdef some cygwin code; ok dtucker@
