--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    No change in resultant binary
  - (djm) [loginrec.c] __func__ifiy
  - (djm) [loginrec.c] xmalloc
+ - (djm) [ssh.c sshd.c version.h] Don't divulge portable version in protocol
+   banner. Suggested by deraadt@, ok mouring@, dtucker@
 
 20040911
  - (djm) [ssh-agent.c] unifdef some cygwin code; ok dtucker@
