--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
  - (djm) [loginrec.c] xmalloc
  - (djm) [ssh.c sshd.c version.h] Don't divulge portable version in protocol
    banner. Suggested by deraadt@, ok mouring@, dtucker@
+ - (dtucker) [configure.ac] Fix incorrect quoting and tests for cross-compile.
+   Partly by & ok djm@.
 
 20040911
  - (djm) [ssh-agent.c] unifdef some cygwin code; ok dtucker@
