--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040921
+ - (dtucker) [openbsd-compat/bsd-snprintf.c] Check for max length too.
+   ok djm@
+
 20040912
  - (djm) [loginrec.c] Start KNF and tidy up of this long-neglected file.
    No change in resultant binary
