--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040923
+ - (dtucker) [openbsd-compat/bsd-snprintf.c] Previous change was off by one,
+   which could have caused the justification to be wrong.  ok djm@
+
 20040921
  - (dtucker) [openbsd-compat/bsd-snprintf.c] Check for max length too.
    ok djm@
