--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20041006
+ - (dtucker) [README.privsep] Bug #939: update info about HP-UX Trusted Mode
+   and other PAM platforms.
+
 20040930
  - (dtucker) [configure.ac] Set AC_PACKAGE_NAME.  ok djm@
 
