--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20041006
  - (dtucker) [README.privsep] Bug #939: update info about HP-UX Trusted Mode
    and other PAM platforms.
+ - (dtucker) [monitor_mm.c openbsd-compat/xmmap.c] Bug #940: cast constants
+   to void * to appease picky compilers (eg Tru64's "cc -std1").
 
 20040930
  - (dtucker) [configure.ac] Set AC_PACKAGE_NAME.  ok djm@
