--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20041016
- - (djm) [auth-pam.c] snprintf->strl*, fix server message length calculations
+ - (djm) [auth-pam.c] snprintf->strl*, fix server message length calculations;
+   ok dtucker@
 
 20041006
  - (dtucker) [README.privsep] Bug #939: update info about HP-UX Trusted Mode
