--- a/INSTALL
+++ b/INSTALL
@@ -52,6 +52,14 @@ http://www.lothar.com/tech/crypto/
 S/Key Libraries:
 http://www.sparc.spb.su/solaris/skey/
 
+LibEdit:
+
+sftp now supports command-line editing via NetBSD's libedit.  If your
+platform has it available natively you can use that, alternatively
+you might try these multi-platform ports:
+http://www.thrysoee.dk/editline/
+http://sourceforge.net/projects/libedit/
+
 If you wish to use --with-skey then you will need the above library
 installed.  No other current S/Key library is currently known to be
 supported.
