- (dtucker) [auth1.c auth2.c] If the user successfully authenticates but is    subsequently denied by the PAM auth stack, send the PAM message to the    user via packet_disconnect (Protocol 1) or userauth_banner (Protocol 2).    ok djm@

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,10 @@
      - add -O
      - sync -S w/ manpage
      - remove -h
+ - (dtucker) [auth1.c auth2.c] If the user successfully authenticates but is
+   subsequently denied by the PAM auth stack, send the PAM message to the
+   user via packet_disconnect (Protocol 1) or userauth_banner (Protocol 2).
+   ok djm@
 
 20041107
  - (dtucker) OpenBSD CVS Sync
