--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20041206
+ - (dtucker) [TODO WARNING.RNG] Update to reflect current reality.  ok djm@
+
 20041203
  - (dtucker) OpenBSD CVS Sync
    - jmc@cvs.openbsd.org 2004/11/07 17:42:36
