--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20041213
+ - (dtucker) [contrib/findssh.sh] Clean up on interrupt; from
+   amarendra.godbole at ge com.
+
 20041211
  - (dtucker) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2004/12/06 16:00:43
