--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
    prngd is not running.  Note that if you have prngd running when OpenSSH is
    built, OpenSSL will consider itself internally seeded and rand-helper won't
    be built at all unless explicitly enabled via --with-rand-helper.  ok djm@
+ - (dtucker) [regress/rekey.sh] Touch datafile before filling with dd, since
+   on some wacky platforms (eg old AIXes), dd will refuse to create an output
+   file if it doesn't exist.
 
 20041213
  - (dtucker) [contrib/findssh.sh] Clean up on interrupt; from
