- (dtucker) [INSTALL Makefile.in configure.ac survey.sh.in] Implement    "make survey" and "make send-survey".  This will provide data on the    configure parameters, platform and platform features to the development    team, which will allow (among other things) better targetting of testing.    It's entirely voluntary and is off be default. ok djm@

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+20040118
+ - (dtucker) [INSTALL Makefile.in configure.ac survey.sh.in] Implement
+   "make survey" and "make send-survey".  This will provide data on the
+   configure parameters, platform and platform features to the development
+   team, which will allow (among other things) better targetting of testing.
+   It's entirely voluntary and is off be default. ok djm@
+
 20041220
  - (dtucker) [ssh-rand-helper.c] Fall back to command-based seeding if reading
    from prngd is enabled at compile time but fails at run time, eg because
