--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    configure parameters, platform and platform features to the development
    team, which will allow (among other things) better targetting of testing.
    It's entirely voluntary and is off be default. ok djm@
+ - (dtucker) [survey.sh.in] Remove any blank lines from the output of
+   ccver-v and ccver-V.
 
 20041220
  - (dtucker) [ssh-rand-helper.c] Fall back to command-based seeding if reading
