--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,8 @@
  - (dtucker) [loginrec.h] Bug #952: Increase size of username field to 128
    bytes to prevent errors from login_init_entry() when the username is
    exactly 64 bytes(!) long.  From brhamon at cisco.com, ok djm@
+ - (dtucker) [auth-chall.c auth.h auth2-chall.c] Bug #936: Remove pam from
+   the list of available kbdint devices if UsePAM=no.  ok djm@
 
 20050118
  - (dtucker) [INSTALL Makefile.in configure.ac survey.sh.in] Implement
