--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20050202
+ - (dtucker) [configure.ac openbsd-compat/realpath.c] Sync up with realpath
+   rev 1.11 from OpenBSD and make it use fchdir if available.  ok djm@
+
 20050201
  - (dtucker) [log.c] Bug #973: force log_init() to open syslog, since on some
    platforms syslog will revert to its default values.  This may result in
