--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,10 @@
    attempts (currently only for password, kbdint and C/R, only on Linux and
    HP-UX), based on code from login.c from util-linux. With ashok_kovai at
    hotmail.com, ok djm@
+ - (dtucker) [Makefile.in auth.c auth.h auth1.c auth2.c loginrec.c monitor.c
+   monitor.h monitor_wrap.c monitor_wrap.h session.c sshd.c] Bug #125:
+   (first stage) Add audit instrumentation to sshd, currently disabled by
+   default.  with suggestions from and djm@
 
 20050201
  - (dtucker) [log.c] Bug #973: force log_init() to open syslog, since on some
