--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20050208
+ - (dtucker) [regress/test-exec.sh] Bug #912: Set _POSIX2_VERSION for the
+   regress tests so newer versions of GNU head(1) behave themselves.  Patch
+   by djm, so ok me.
+
 20050204
  - (dtucker) [monitor.c] Permit INVALID_USER audit events from slave too.
  - (dtucker) [auth.c] Fix parens in audit log check.
