--- a/ChangeLog
+++ b/ChangeLog
@@ -21,8 +21,8 @@
  - (dtucker) [auth-passwd.c openbsd-compat/port-aix.c] Don't call
    disable_forwarding() from compat library. Prevent linker errrors trying
    to resolve it for binaries other than sshd.  ok djm@
-
-   when 
+ - (dtucker) [configure.ac] Bug #854: prepend pwd to relative --with-ssl-dir
+   paths.  ok djm@
 
 20050208
  - (dtucker) [regress/test-exec.sh] Bug #912: Set _POSIX2_VERSION for the
