--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,9 @@
    to resolve it for binaries other than sshd.  ok djm@
  - (dtucker) [configure.ac] Bug #854: prepend pwd to relative --with-ssl-dir
    paths.  ok djm@
+ - (dtucker) [configure.ac session.c] Some platforms (eg some SCO) require
+   the username to be passed to the passwd command when changing expired
+   passwords.  ok djm@
 
 20050208
  - (dtucker) [regress/test-exec.sh] Bug #912: Set _POSIX2_VERSION for the
