--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20050215
+ - (dtucker) [config.sh.in] Collect oslevel -r too.
+
 20050211
  - (dtucker) [configure.ac] Tidy up configure --help output.
  - (dtucker) [openbsd-compat/fake-rfc2553.h] We now need EAI_SYSTEM too.
