--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 20050215
  - (dtucker) [config.sh.in] Collect oslevel -r too.
+ - (dtucker) [README.platform auth.c configure.ac loginrec.c
+   openbsd-compat/port-aix.c openbsd-compat/port-aix.h] Bug #835: enable IPv6
+   on AIX where possible (see README.platform for details) and work around
+   a misfeature of AIX's getnameinfo.  ok djm@
 
 20050211
  - (dtucker) [configure.ac] Tidy up configure --help output.
