--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
    openbsd-compat/port-aix.c openbsd-compat/port-aix.h] Bug #835: enable IPv6
    on AIX where possible (see README.platform for details) and work around
    a misfeature of AIX's getnameinfo.  ok djm@
+ - (dtucker) [loginrec.c] Add missing #include.
 
 20050211
  - (dtucker) [configure.ac] Tidy up configure --help output.
