--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    ok dtucker@
  - (dtucker) [ssh-rand-helper.c] Provide seed_rng since it may be called
    via mkstemp in some configurations.  ok djm@
+ - (dtucker) [auth-shadow.c] Prevent compiler warnings if "DAY" is defined
+   by the system headers.
 
 20050215
  - (dtucker) [config.sh.in] Collect oslevel -r too.
