--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,9 @@
    via mkstemp in some configurations.  ok djm@
  - (dtucker) [auth-shadow.c] Prevent compiler warnings if "DAY" is defined
    by the system headers.
+ - (dtucker) [configure.ac] Bug #893: check for libresolv early on Reliant
+   Unix; prevents problems relating to the location of -lresolv in the
+   link order.
 
 20050215
  - (dtucker) [config.sh.in] Collect oslevel -r too.
