--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    defines.h] Bug #125: Add *EXPERIMENTAL* BSM audit support.  Configure
    --with-audit=bsm to enable.  Patch originally from Sun Microsystems,
    parts by John R. Jackson.  ok djm@
+ - (dtucker) [configure.ac] Missing comma in AIX section, somehow causes
+   unrelated platforms to be configured incorrectly.
 
 20050216
  - (djm) write seed to temporary file and atomically rename into place; 
