--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20050222
+ - (dtucker) [uidswap.c] Skip uid restore test on Cygwin.  Patch from
+   vinschen at redhat.com.
+
 20050220
  - (dtucker) [LICENCE Makefile.in README.platform audit-bsm.c configure.ac
    defines.h] Bug #125: Add *EXPERIMENTAL* BSM audit support.  Configure
