--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-20050222
+20050226
+ - (dtucker) [openbsd-compat/bsd-openpty.c openbsd-compat/inet_ntop.c]
+   Remove two obsolete Cygwin #ifdefs.  Patch from vinschen at redhat.com.
+
+20050224
  - (djm) [configure.ac] in_addr_t test needs sys/types.h too
 
 20050222
