--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20050307
+ - (dtucker) [configure.ac] Disable gettext search when configuring with
+   BSM audit support for the time being.  ok djm@
+
 20050306
  - (dtucker) [monitor.c] Bug #125 comment #47: fix errors returned by monitor
    when attempting to audit disconnect events.  Reported by Phil Dibowitz.
