--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@
    - djm@cvs.openbsd.org 2005/03/04 08:48:46
      [Makefile envpass.sh]
      regress test for SendEnv config parsing bug; ok dtucker@
+ - (dtucker) [regress/test-exec.sh] Put SUDO in the right place.
 
 20050306
  - (dtucker) [monitor.c] Bug #125 comment #47: fix errors returned by monitor
