--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@
      [Makefile envpass.sh]
      regress test for SendEnv config parsing bug; ok dtucker@
  - (dtucker) [regress/test-exec.sh] Put SUDO in the right place.
+ - (tim) [configure.ac] SCO 3.2v4.2 no longer supported.
 
 20050306
  - (dtucker) [monitor.c] Bug #125 comment #47: fix errors returned by monitor
