--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20050309
+ - (dtucker) [regress/test-exec.sh] Set BIN_SH=xpg4 on OSF1/Digital Unix/Tru64
+   so that regress tests behave.  From Chris Adams.
+
 20050307
  - (dtucker) [configure.ac] Disable gettext search when configuring with
    BSM audit support for the time being.  ok djm@
