--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,8 @@
    - markus@cvs.openbsd.org 2005/03/14 11:46:56
      [buffer.c buffer.h channels.c]
      limit input buffer size for channels; bugzilla #896; with and ok dtucker@
+ - (tim) [contrib/caldera/openssh.spec] links in rc?.d were getting trashed
+   with a rpm -F
 
 20050313
  - (dtucker) [contrib/cygwin/ssh-host-config] Makes the query for the
