--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20050317
  - (tim) [configure.ac] Bug 998. Make path for --with-opensc optional.
    Make --without-opensc work.
+ - (tim) [configure.ac] portability changes on test statements. Some shells
+   have problems with -a operator.
 
 20050314
  - (dtucker) OpenBSD CVS Sync
