--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
    Make --without-opensc work.
  - (tim) [configure.ac] portability changes on test statements. Some shells
    have problems with -a operator.
+ - (tim) [configure.ac] make some configure options a little more error proof.
 
 20050314
  - (dtucker) OpenBSD CVS Sync
