- (dtucker) [configure.ac openbsd-compat/port-aix.h] Prevent redefinitions    of setauthdb on AIX 5.3, reported by anders.liljegren at its.uu.se.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
  - (dtucker) [configure.ac] Make configure error out if the user specifies
    --with-libedit but the required libs can't be found, rather than silently
    ignoring and continuing.  ok tim@
+ - (dtucker) [configure.ac openbsd-compat/port-aix.h] Prevent redefinitions
+   of setauthdb on AIX 5.3, reported by anders.liljegren at its.uu.se.
 
 20050317
  - (tim) [configure.ac] Bug 998. Make path for --with-opensc optional.
