--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20050419
+ - (dtucker) [INSTALL] Reference README.privsep for the privilege separation
+   requirements.  Pointed out by Bengt Svensson.
+
 20050411
  - (tim) [configure.ac] UnixWare needs PASSWD_NEEDS_USERNAME
 
